# 02180-Intro.-AI---Assignment-2

./: .gitignore  README.md
Thoughts/: belief_revision_assignment_getting_started.md  thoughts.md
belief_revision_submission_v2/: report.tex
belief_revision_submission_v2/source/: README.md  pyproject.toml
belief_revision_submission_v2/source/belief_revision/: __init__.py  belief_base.py  cli.py  cnf.py  formula.py  mastermind.py  parser.py  resolution.py
belief_revision_submission_v2/source/examples/: demo.py  mastermind_demo.py
belief_revision_submission_v2/source/tests/: test_agm.py  test_mastermind.py  test_resolution.py
src/: Mastermind_demo.py  belief_base.py  cnf.py  demo.py  entailment.py  main.py  node.py  parser.py  revision.py  tests.py
